syntax = "proto3";

option go_package = "github.com/plaoludastruja/JBSPLS/Skitnica/backend/common/appointment";

package appointment;

import "google/api/annotations.proto";

service AppointmentService {
        rpc Get(GetRequest) returns(GetResponse) {
            option (google.api.http) = {
                get: "/appointment/{id}"
            };
        }
        rpc GetAll(GetAllRequest) returns(GetAllResponse) {
            option (google.api.http) = {
                get: "/appointment"
            };
        }
        rpc CreateAppointment(CreateAppointmentRequest) returns(CreateAppointmentResponse) {
            option (google.api.http) = {
                post: "/appointment"
                body: "appointment"
            };
        }
        rpc EditAppointment(EditAppointmentRequest) returns(EditAppointmentResponse) {
            option (google.api.http) = {
                put: "/appointment"
                body: "appointment"
            };
        }
        rpc DeleteAppointment(DeleteRequest) returns(DeleteResponse) {
            option (google.api.http) = {
                delete: "/appointment/{id}"
            };
        }
        rpc GetByAccomodation(GetAccomodationRequest) returns(GetAccomodationResponse) {
            option (google.api.http) = {
                get: "/appointment/{accomodationId}"
            };
        }
        
}

message GetRequest {
        string id = 1;
}

message GetResponse {
        Appointment appointment = 1;
}

message GetAllRequest {
}

message GetAllResponse {
        repeated Appointment appointments = 1;
}

message DeleteRequest {
        string id = 1;
}

message DeleteResponse {
}

message CreateAppointmentRequest {
        Appointment appointment = 1;
}

message CreateAppointmentResponse {
        Appointment appointment = 1;
}

message EditAppointmentRequest {
        Appointment appointment = 1;
}

message EditAppointmentResponse {
        Appointment appointment = 1;
}

message GetAccomodationRequest {
        string accomodationId = 1;
}

message GetAccomodationResponse {
        repeated Appointment appointments = 1;
}

message Appointment {
        string id = 1;
        string accomodationId = 2;
        string start = 3;
        string end = 4;
        string priceType = 5;
        int32 price = 6;
        string status = 7;
}